fix gap included activities

--- a/pt-web/src/pages/tourDetailsPage/TourDetailsPage.module.scss
+++ b/pt-web/src/pages/tourDetailsPage/TourDetailsPage.module.scss
@@ -355,6 +355,10 @@
   gap: 60px;
   margin-top: 40px;
   margin-bottom: 40px;
+
+  @media (max-width: 816px) {
+    gap: auto;
+  }
 }
 
 .included {
